<resources>

    <string name="app_name">Stock Settings</string>
    <string name="gesture">Touch Gesture</string>
    <string name="gesture_warning">Warning</string>
    <string name="gesture_warning_summary">MIUI Gesture Control for Oneplus One is created independently by Xs,Please do not re-use any part of the application without permission</string>
    <string name="double_tap_to_wake">Double Tap Wake</string>
    <string name="double_tap_to_wake_summary_off">Off</string>
    <string name="double_tap_to_wake_summary_on">On</string>
    <string name="camera_gesture">Draw a circle to activate camera</string>
    <string name="camera_gesture_summary_off">Off</string>
    <string name="camera_gesture_summary_on">On</string>
    <string name="music_gesture">Two fingers vertically to play/pause Music</string>
    <string name="music_gesture_summary_off">Off</string>
    <string name="music_gesture_summary_on">On</string>
	<string name="myappscreenmask">Screen mask</string>
    <string name="mipop">Virtual Key</string>
    <string name="about">About</string>
    <string name="qq_group">QQ Group</string>
    <string name="qq_group_summary">385221332</string>
    <string name="reboot">Advanced Reboot</string>
    <string name="camera_sound">Camera Sound</string>
    <string name="record_sound">Record Sound</string>
    <string name="focus_sound">Focus Sound</string>
    <string name="camera_sound_summary_off">Off</string>
    <string name="camera_sound_summary_on">On</string>
    <string name="record_sound_summary_off">Off</string>
    <string name="record_sound_summary_on">On</string>
    <string name="focus_sound_summary_off">Off</string>
    <string name="focus_sound_summary_on">On</string>
    <string name="camera">Camera Sound</string>
    <string name="camera_switch">Camera Switch</string>
    <string name="cm_camera">CyanogenMod Camera</string>
    <string name="nubia_camera">Nubia Camera</string>
    <string name="miui_camera">MIUI Camera</string>
    <string name="camera_switch_warning">Warning</string>
    <string name="camera_switch_warning_summary">The default camera is CyanogenMod Camera,if you change the other camera,every time OTA when the proposal are switching back to the CM camera, to prevent the failure of OTA!</string>
    <string name="tap_about">Author:XS</string>
    
</resources>
