<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    <CheckBoxPreference 
        android:title="CRT"
        android:key="screen_animation_style" >
    </CheckBoxPreference>
    
    <CheckBoxPreference 
        android:title="@string/reboot"
        android:key="advanced_reboot" >
    </CheckBoxPreference>
    
    <Preference
        android:title="@string/mipop" >
        <intent
            android:action="android.intent.action.MAIN"
            android:targetClass="com.android.mipop.MIPopActivity"
            android:targetPackage="com.android.mipop" />
    </Preference>
    
    <Preference 
        android:title="@string/camera" >
        <intent
            android:action="android.intent.action.MAIN"
            android:targetClass="com.xs.stocksettings.SoundActivity"
            android:targetPackage="com.xs.stocksettings" >
        </intent>
    </Preference>
    
    <Preference 
        android:title="@string/gesture" >
        <intent
            android:action="android.intent.action.MAIN"
            android:targetClass="com.xs.stocksettings.GestureActivity"
            android:targetPackage="com.xs.stocksettings" >
        </intent>
    </Preference>
    
    <Preference 
        android:title="@string/qq_group"
        android:summary="@string/qq_group_summary" >
    </Preference>
    <Preference
        android:key="about"
        android:title="@string/about"
        android:summary="© Oneplus MIUI Tools | Powered by Xs" >
    </Preference>

</PreferenceScreen>